--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,17 +10,20 @@ license = "MIT"
 repository = "https://github.com/scalliony/repo"
 
 [features]
-default = ["threaded", "log-rs"]
-local = ["engine"]
+default = ["threaded"]
+online = ["bulb/serde", "quad-net", "serde_json"]
+offline = ["engine"]
 threaded = []
-log-rs = ["macroquad/log-rs", "env_logger"]
 
 [dependencies]
 bulb = { path = "../bulb", package = "scalliony-bulb", version = "0.1.0" }
 engine = { path = "../engine", package = "scalliony-engine", version = "0.1.0", optional = true }
-macroquad = { version = "0.3", default-features = false, features = ["audio"] }
+quad-net = { version = "0.1", default-features = false, optional = true }
+serde_json = { version = "1", optional = true }
+macroquad = { version = "0.3", default-features = false, features = ["audio", "log-rs"] }
 egui-miniquad = "0.11"
 egui = "0.18"
+chrono = { version = "0.4", default-features = false, features = ["std"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-env_logger = { version = "0.9", optional = true }
+env_logger = "0.9"
