--- a/.env.sample
+++ b/.env.sample
@@ -16,7 +16,7 @@ AUTH_GITHUB_CLIENT_SECRET=xxxxxx
 
 # Control game server from ui
 #API_ADMIN=provider:id,prov2:name
-ASSETS_DIR=web/dist
+ASSETS_DIR=client/dist
 
 # Configuration for cache management
 #WASMTIME_CONFIG=wasmtime/config.toml
