--- a/.env.sample
+++ b/.env.sample
@@ -12,7 +12,7 @@ AUTH_GITHUB_CLIENT_SECRET=xxxxxx
 # FIXME: pick a random string and uncomment
 #AUTH_JWT_SECRET=xxxxxx
 # Public url of your authentification endpoint
-#AUTH_BASE_URL=http://localhost:3000/auth
+#AUTH_BASE_URL=http://127.0.0.1:3000/auth
 
 # Control game server from ui
 #API_ADMIN=provider:id,prov2:name
