--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,7 +15,7 @@ log-tree = ["tracing-forest"]
 [dependencies]
 engine = { package = "scalliony-engine", path = "../engine", version = "0.1.0", features = ["serde"] }
 axum = { version = "0.5", features = ["ws", "headers"] }
-axum-extra = { version = "0.3", features = ["spa", "typed-routing", "cookie"] }
+axum-extra = { version = "0.3", features = ["typed-routing", "cookie"] }
 futures = "0.3"
 serde = "1"
 serde_json = "1"
@@ -24,7 +24,7 @@ reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
 tower = "0.4"
-tower-http = { version = "0.3", features = ["trace", "request-id"] }
+tower-http = { version = "0.3", features = ["trace", "request-id", "fs", "set-header"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-appender = { version = "0.2", features = ["parking_lot"] }
