--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -20,10 +20,9 @@ bulb = { path = "../bulb", package = "scalliony-bulb", version = "0.1.0" }
 engine = { path = "../engine", package = "scalliony-engine", version = "0.1.0", optional = true }
 quad-net = { version = "0.1", default-features = false, optional = true }
 serde_json = { version = "1", optional = true }
-macroquad = { version = "0.3", default-features = false, features = ["audio", "log-rs"] }
-egui-miniquad = "0.12"
-egui = "0.19"
+macroquad = { version = "0.3.25", default-features = false, features = ["audio", "log-rs"] }
+egui-macroquad = "0.15"
 chrono = { version = "0.4", default-features = false, features = ["std"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-env_logger = "0.9"
+env_logger = "0.10"
